--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1> Heading </h1>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
