--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <header id="header-nav"></header>
+    <section id="page"></section>
     <h1> Heading </h1>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
