--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,10 @@
     <section id="page"></section>
     <h1> Heading </h1>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src ="js/components/bucketlist.js"> </script>
+    <script src ="js/components/header.js"></script>
+    <script src ="js/components/about.js"></script>
+    <script defer src = "js/initialise.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
