Adding a sign up page and linking in html & header.js with James

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <section id="page"></section>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/components/bucketlist.js"> </script>
+    <script src="js/components/signup.js"> </script>
     <script src="js/components/header.js"></script>
     <script src="js/components/about.js"></script>
     <script src="js/components/addBucketlist.js"></script>
