--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/components/bucketlist.js"> </script>
     <script src="js/components/signup.js"> </script>
+    <script src="js/components/login.js"> </script>
+    <script src="js/components/logout.js"> </script>
     <script src="js/components/header.js"></script>
     <script src="js/components/about.js"></script>
     <script src="js/components/addBucketlist.js"></script>
