--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
     <script src="js/components/header.js"></script>
     <script src="js/components/about.js"></script>
     <script src="js/components/addBucketlist.js"></script>
+    <script src="js/components/askOpenAI.js"></script>
+    <!-- <script src="utilities/gptUtil.js"></script> -->
     <script defer src="js/initialise.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
