--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
     <script src="js/components/about.js"></script>
     <script src="js/components/addBucketlist.js"></script>
     <script src="js/components/askOpenAI.js"></script>
+    <script src="js/components/explore.js"></script>
     <!-- <script src="utilities/gptUtil.js"></script> -->
     <script defer src="js/initialise.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
