--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     <script src="js/components/login.js"> </script>
     <script src="js/components/logout.js"> </script>
     <script src="js/components/header.js"></script>
-    <script src="js/components/about.js"></script>
+    <script src="js/components/howto.js"></script>
     <script src="js/components/addBucketlist.js"></script>
     <script src="js/components/askOpenAI.js"></script>
     <script src="js/components/explore.js"></script>
