--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BucketList</title>
+    <title>BucketList.AI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -15,17 +15,16 @@
     <header id="header-nav"></header>
     <section id="page"></section>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/components/bucketlist.js"> </script>
-    <script src="js/components/signup.js"> </script>
-    <script src="js/components/login.js"> </script>
-    <script src="js/components/logout.js"> </script>
-    <script src="js/components/header.js"></script>
-    <script src="js/components/howto.js"></script>
     <script src="js/components/addBucketlist.js"></script>
     <script src="js/components/askOpenAI.js"></script>
+    <script src="js/components/bucketlist.js"> </script>
     <script src="js/components/explore.js"></script>
+    <script src="js/components/header.js"></script>
     <script src="js/components/homepage.js"></script>
-    <!-- <script src="utilities/gptUtil.js"></script> -->
+    <script src="js/components/howto.js"></script>
+    <script src="js/components/login.js"> </script>
+    <script src="js/components/logout.js"> </script>
+    <script src="js/components/signup.js"> </script>
     <script defer src="js/initialise.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
