--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
 <body>
     <header id="header-nav"></header>
     <section id="page"></section>
+    <footer>© Copyright to Su Kayali, Robert Lam, James Preston & Galit Moss</footer>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/components/addBucketlist.js"></script>
     <script src="js/components/askOpenAI.js"></script>
