--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,16 @@
     <title>BucketList.AI</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Red+Hat+Display&family=Work+Sans&family=Ysabeau+Office&family=Ysabeau+SC:wght@600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Red+Hat+Display&family=Work+Sans&family=Ysabeau+Office&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Red+Hat+Display&family=Work+Sans&family=Ysabeau+Infant:wght@200;300;400&family=Ysabeau+Office&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
